Fix #863: Delete folder button not visible when folder not selected

--- a/src/app/ui/components/add-folder/add-folder.component.scss
+++ b/src/app/ui/components/add-folder/add-folder.component.scss
@@ -23,7 +23,7 @@
     display: none;
 }
 
-.folder:hover .folder-item__action {
+.folder:hover .folder__action {
     background: var(--theme-hovered-item-background);
     display: block !important;
 }
